* added ARG_ARRAY_SUFFIX
* added --same-credentials flag
* fixed parsing of hosts file

0.1.1
* support for (non)verification of server-side certificates
* allowed *connection* to be an argument in command usage strings
* fixed command declaration checking
* relicensed to BSD
* added namespace property to end-point commands
* associated functions invoked with namespace rather then just connection
object

0.1.0
* initial version with dependency only on docopt